# optimas

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  server.js  stop  vercel.json
app/: dashboard-layout.tsx  globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/camera/: Untitled  page.tsx
app/dashboard/: page.tsx
app/devices/: page.tsx
app/files/: page.tsx
app/forgot-password/: page.tsx
app/login/: login-form.tsx  page.tsx
app/logs/: page.tsx
app/notifications/: page.tsx
app/register/: page.tsx
app/screen/: page.tsx
app/shell/: page.tsx
app/verify-otp/: page.tsx
components/: DeviceMap.tsx  DeviceThreeChart.tsx  DeviceUserDataThreeChart.tsx  app-sidebar.tsx  auth-guard.tsx  auth-layout.tsx  custom-slider.tsx  zenvora-logo.tsx
components/file-manager/: cloud-folder-picker-dialog.tsx  cloud-vault-manager.tsx  file-data-table.tsx  file-manager.tsx
components/shell/: agent-chat-message.tsx  agent-chat-panel.tsx
components/ui/: dialog.tsx
hooks/: use-agent-chat.ts  use-cloud-vault.ts  use-file-agent.ts  use-gateway.ts  use-screen-remote.ts
kotlin/: final.html  permitions.html  splash.html
lib/: gateway-client.ts  parse-api-response.ts  secure-api.ts
lib/file-manager/: types.ts  utils.ts
server/config/: db.js  next.js
server/db/: BaseVirtualFileRepository.js  BaseVirtualFolderRepository.js  DatabaseFactory.js
server/middleware/: auth.js  security.js
server/models/: ActivityLog.js  AgentCredential.js  AppHistory.js  BrowserHistory.js  Device.js  Notification.js  User.js  VirtualFile.js  VirtualFolder.js
tests/: security.test.js
zenvora_agent/: Cargo.toml  build.rs
zenvora_agent/src/: activity.rs  activity_monitor.rs  agent.rs  agent_log.rs  app_history.rs  audio.rs  browser_history.rs  camera_worker.rs  com_runtime.rs  commands.rs  config.rs  connection_status.rs  file_commands.rs  files.rs  history_commands.rs  input.rs  main.rs  network.rs  notifications.rs  router.rs  screen.rs  screen_commands.rs  service.rs  session_launch.rs  shell_commands.rs  system.rs  ui_notify.rs  windows_controls.rs
(+50 files in other folders)
